# web-vuln-scanner

./: .dockerignore  .gitignore  .gitmodules  .wvs-ignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bak  LICENSE  README.md  SECURITY.md  docker-compose.test.yml  main.py  pyproject.toml  report.json  requirements.txt
.backup_scanner/scanner.202511091958/: payload_injector.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labels.md
.github/workflows/: ci.yml
core-go/: go.mod  main.go
docs/: ipc.md
examples/: api_request.json  export_elk.py  generate_report.py  report.html  report.json  run_api_scan.py  run_auth_scan.py  run_core.py  run_modules.py  run_modules_adapters.py  run_template.py  run_template_scan.py
examples/dvwa/: README.md
examples/juice-shop/: README.md
experiments/core-go/: fingerprint_test.go  go.mod
experiments/scanner-legacy/: payload_injector.py
pywvs/: __init__.py  __main__.py  cli.py  core_runner.py
pywvs/api/: loader.py  models.py  scanner.py
pywvs/auth/: login.py  models.py  session.py  store.py
pywvs/exporters/: __init__.py  base.py  elk_exporter.py
pywvs/ignore/: loader.py  matcher.py
pywvs/modules/: __init__.py  base.py  finding.py  sqli.py  sqli_adapter.py  xss.py  xss_adapter.py
pywvs/reporters/: base.py  html_reporter.py  json_reporter.py
pywvs/templates/: engine.py  loaders.py  models.py  runner.py  xss-reflected.yaml
scanner/: form_finder.py  payload_injector.py
tests/: test_sqli_passive.py  test_xss_module.py
tests/fixtures/: sample_response.json
(+4 files in other folders)
